<resources>
    <string name="app_name">Aqua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consumer_login_fragment">Login to your account</string>
    <string name="consumer_login_edit_text_password">Password</string>
    <string name="consumer_login_text_view_password">Password</string>
    <string name="consumer_login_text_view_email">Email</string>
    <string name="consumer_login_edit_text_email">Email</string>
    <string name="consumer_login_text_view_forget_password">Forgot Password?</string>
    <string name="consumer_login_button_login">Login</string>
    <string name="consumer_login_text_view_signup">SignUp</string>
    <string name="consumer_sign_up_text_view_back">Back</string>
    <string name="consumer_sign_up_fragment">Sign up to your account</string>
    <string name="consumer_signup_text_view_first_name">First Name</string>
    <string name="consumer_signup_edit_text_first_name">First Name</string>
    <string name="consumer_signup_text_view_last_name">Last Name</string>
    <string name="consumer_signup_edit_text_last_name">Last Name</string>
    <string name="consumer_signup_text_view_email">Email</string>
    <string name="consumer_signup_edit_text_email">Email</string>
    <string name="consumer_signup_text_view_password">Password</string>
    <string name="consumer_signup_edit_text_password">Password</string>
    <string name="consumer_signup_text_view_phoneNumber">Phone Number</string>
    <string name="consumer_signup_edit_text_phoneNumber">Phone number</string>
    <string name="consumer_signup_text_view_address">Address</string>
    <string name="consumer_signup_edit_text_address">Location</string>
    <string name="consumer_signup_text_view_number_of_bottles">Number Of Bottle</string>
    <string name="consumer_signup_edit_text_number_of_bottles">1</string>
    <string name="consumer_signup_button_login">SignUp</string>
    <string name="consumer_signup_text_view_already_have_an_account">Already have an account?</string>
    <string name="consumer_signup_text_view_sign_in">Sign in</string>

    <string name="firstOBTitle">Find the best deals and special offers!</string>
    <string name="firstOBText">Signing up and receiving your order is straightforward and effortless. There is no need to contact the seller or sign a contract.</string>
    <string name="secondOBTitle">Transparent pricing</string>
    <string name="secondOBText">Before placing an order, customers will input their address for delivery and receive detailed pricing information. There are no hidden costs!</string>
    <string name="thirdOBTitle">Timely delivery</string>
    <string name="thirdOBText">Depending on the customer\'s needs, delivery can be one time or long running.</string>


    <!--For customer bottom navigation-->
    <string name="home_tab">Home</string>
    <string name="transaction_tab">Transaction</string>
    <string name="account_tab">Account</string>

    <string name="supplier_homepage">Supplier Homepage</string>
    <string name="back">Back</string>
    <string name="statistics_level">Statistics Level</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite friends</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="email">abimbolathomas@gmail.com</string>
    <string name="profile_name">Abimbola Thomas</string>
    <string name="profile_image">profile Image</string>
    <string name="title">My Profile</string>
    <string name="greeting">Hi, Godswill</string>
    <string name="search_hint">Search for supplier</string>
    <string name="consumtion_text">Your consumption level is 65.89%</string>
    <string name="date">Today 02 Apr 2022</string>
    <string name="recyclerview_title">Suppliers</string>
    <string name="company_name">Arizona Water Inc</string>
    <string name="location">Ikeja, Lagos</string>
    <string name="price">N900.00 per/bottle</string>
    <string name="store">View store</string>
    <string name="day_usageText">TOTAL USAGE TODAY</string>
    <string name="day_UsagePercent">65.89%</string>
    <string name="month_usageText">TOTAL USAGE THIS MONTH</string>
    <string name="month_usagePercent">35.51%</string>
    <string name="week_usageText">TOTAL USAGE THIS WEEK</string>
    <string name="week_usagePercent">55.18%</string>
    <string name="year_usageText">TOTAL USAGE THIS YEAR</string>
    <string name="year_usagePercent">29.76%</string>
    <string name="hi_supplier">Hi, Supplier</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instruction_to_reset_your_password">Enter the email associated with your account and we \'ll send an email with instruction to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="check_mail">Check Mail</string>
    <string name="we_have_sent_a_password_recover_instruction_to_your_account">we have sent a password recover instruction to your account</string>
    <string name="did_not_receive_the_email_check_your_spam_filter_or">Did not receive the email? check your spam filter, or</string>
    <string name="try_another_email">try another email</string>
    <string name="allows_you_receive_notification_on_nphone_screen">Allows you receive notification on \nphone screen</string>
    <string name="email_notification">Email notification</string>
    <string name="allows_you_receive_the_eemail_notification_nfrom_the_app">Allows you receive the Eemail notification \nfrom the app</string>
    <string name="refer_your_friends_earn_ncash_back"><![CDATA[Refer your friends & earn \ncash back]]></string>
    <string name="invite_your_friends_to_join_aqua_and_get_n500_ncash_back_for_each_friend_that_joins_using_nyour_referral_code">Invite your friends to join Aqua and get N500 \ncash back for each friend that joins using \nyour referral code</string>
    <string name="invite_more_friends">Invite more friends</string>
    <string name="transaction_history">Transaction History</string>
    <string name="arizona_inc">Arizona Inc</string>
    <string name="_6_packs_of_big_bottle_water">6 packs of big bottle water</string>
    <string name="water_plc">Water Plc</string>
    <string name="_3_packs_of_big_bottle_water">3 packs of big bottle water</string>
    <string name="n7_600_00">+N7,600.00</string>
    <string name="_23_3_2022">23/3/2022</string>
    <string name="mag_aqua">Mag Aqua</string>
    <string name="n2_600_00">+N2,600.00</string>
    <string name="aquafina">Aquafina</string>
    <string name="n1_600_00">+N1,600.00</string>
    <string name="confirm_password">Confirm password</string>

</resources>