<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".core.authentication.ConsumerTransactionFragment">


    <ImageView
        android:id="@+id/transaction_imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/transaction_textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/manrope"
        android:text="Back"
        app:layout_constraintStart_toEndOf="@+id/transaction_imageButton1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/transaction_history"
        android:textColor="@color/black"
        android:fontFamily="@font/manrope"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/transaction_imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/transaction_textView3"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_textView3">

        <ImageView
            android:id="@+id/transaction_imageView6"
            android:layout_width="66dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/bottle1" />

        <TextView
            android:id="@+id/transaction_textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/arizona_inc"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/_6_packs_of_big_bottle_water"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope_light"
            android:text="+N4,600.00"
            android:textColor="@color/active_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/manrope_light"
            android:text="23/3/2022"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/transaction_imageView11"
            android:layout_width="66dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/bottle2" />

        <TextView
            android:id="@+id/transaction_textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/water_plc"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/_3_packs_of_big_bottle_water"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/n7_600_00"
            android:textColor="@color/active_text_color"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/transaction_textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/_23_3_2022"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <ImageView
            android:id="@+id/transaction_imageView16"
            android:layout_width="66dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/bottle3" />

        <TextView
            android:id="@+id/transaction_textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/mag_aqua"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/manrope_light"
            android:text="6 packs of big bottle water"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/n2_600_00"
            android:textColor="@color/active_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/manrope_light"
            android:text="23/3/2022"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <ImageView
            android:id="@+id/transaction_imageView21"
            android:layout_width="66dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/bottle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/transaction_textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/aquafina"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="46dp"
            android:text="6 packs of big bottle water" />

        <TextView
            android:id="@+id/transaction_textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/n1_600_00"
            android:textColor="@color/active_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/transaction_textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:text="23/3/2022" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

